testsuite/tests/grammar/invalid_unparser/several-2.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Identifier(@Identifier)
        | Identifier(@Example)
        | Number(@Number)
    ))
}
